1、简化接口地址 2、增加账号密码登录功能 3、增加退出账号功能 4、其他优化