@@ -119,7 +119,7 @@ public class RoomAppServiceImpl implements RoomAppService {
     public ChatRoomResp getContactDetailByFriend(Long uid, Long friendUid) {
         RoomFriend friendRoom = roomService.getFriendRoom(uid, friendUid);
         AssertUtil.isNotEmpty(friendRoom, "他不是您的好友");
-        return buildContactResp(uid, Collections.singletonList(friendRoom.getRoomId())).get(0);
+        return buildContactResp(uid, Collections.singletonList(friendRoom.getRoomId())).getFirst();
     }
 
     @Override
